Wed Feb 19 12:37:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/tds/threadsafe.c:
	- fixed portability problem using localtime_r

Tue Feb 18 11:28:43 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/Makefile.am: export only needed symbols
	* win32/msvc6/FreeTDS.def: add SQLGetDiag* exports

Tue Feb 18 10:54:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/asprintf.c: add some include for portability

Fri Feb 14 14:18:10 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/norowset.c:
	- fix problem with store procedures not returning a rowset
	- add a test to test problem

Thu Feb 13 22:21:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/dblib.c src/tds/threadsafe.c:
	* src/tds/token.c src/tds/write.c:
	- start merge patch from sybase
	- add some new types (only constants)
	- best support for bigint under dblib
	- add tds_put_int8

Thu Feb 13 11:53:55 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/sybdb.h src/dblib/dblib.c
	- Bill Thompson's dbresults patch

Thu Feb 13 01:01:47 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c field and row-terminator fix from Craig A. Berry
	* src/tds/token.c small repair to ct_options
	
Thu Feb 13 00:44:32 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsodbc.h  applied Frediano's SQLULEN patch

Wed Feb 12 22:46:47 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/ct_options.c:
	- use small hack to check bus error on some machines

Wed Feb 12 15:57:52 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h  src/ctlib/ct.c  src/tds/token.c
	- more untested support for optioncmd

Wed Feb 12 11:02:30 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/unittests/ct_options.c test of unfinished ct_options()
