@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.84 2003/02/19 11:38:06 freddy77 Exp $
+dnl $Id: configure.in,v 1.85 2003/02/20 02:46:10 vorlon Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -98,6 +98,7 @@ AC_CHECK_HEADERS(paths.h)
 AC_CHECK_HEADERS(sys/ioctl.h)
 AC_CHECK_HEADERS(libgen.h)
 AC_CHECK_HEADERS(sys/param.h)
+AC_CHECK_HEADERS(locale.h)
 AC_HAVE_INADDR_NONE
 
 dnl ------------------------------------------------------------
