@@ -1,3 +1,7 @@
+Wed Feb 19 20:38:00 CST 2003	Steve Langasek  <vorlon@netexpress.net>
+	* configure.in, src/apps/tsql.c: only include locale-related
+	  headers if found on the system
+
 Wed Feb 19 12:37:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* acinclude.m4 configure.in src/tds/threadsafe.c:
 	- fixed portability problem using localtime_r
